--- a/config.h.in
+++ b/config.h.in
@@ -18,8 +18,14 @@
 /* Define to 1 if you have the <crack.h> header file. */
 #undef HAVE_CRACK_H
 
+/* Define to 1 if you have the `crypt' function. */
+#undef HAVE_CRYPT
+
 /* Define to 1 if you have the <crypt.h> header file. */
 #undef HAVE_CRYPT_H
+
+/* Define to 1 if you have the `crypt_newhash' function. */
+#undef HAVE_CRYPT_NEWHASH
 
 /* Define to 1 if you have the <ctype.h> header file. */
 #undef HAVE_CTYPE_H
@@ -98,6 +104,9 @@
 
 /* Define to 1 if you have the `gdbm_compat' library (-lgdbm_compat). */
 #undef HAVE_LIBGDBM_COMPAT
+
+/* Define to 1 if you have the <libgen.h> header file. */
+#undef HAVE_LIBGEN_H
 
 /* Define to 1 if you have the `ndbm' library (-lndbm). */
 #undef HAVE_LIBNDBM
@@ -295,6 +304,12 @@
 
 /* NetBSD system */
 #undef NETBSDHOST
+
+/* OpenBSD system */
+#undef OPENBSDHOST
+
+/* openbsd supports blowfish */
+#undef OPENBSD_BLOWFISH
 
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
