--- a/Makefile.in
+++ b/Makefile.in
@@ -17,7 +17,7 @@ localstatedir   = @localstatedir@
 srcdir          = @srcdir@
 HAVE_GDBMDIR_NDBM_H   	= -D@HAVE_GDBMDIR_NDBM_H@
 HAVE_CHPASS_CRYPT  	= -D@HAVE_CHPASS_CRYPT@
-inc_files       = msg.h cgipaf_defs.h cgipaf_vars.h cgipaf_acl.c cgipaf_pwlocation.c cgipaf_init.c
+inc_files       = msg.h cgipaf_defs.h cgipaf_vars.h cgipaf_acl.c cgipaf_pwlocation.c cgipaf_init.c cgipaf_version.h
 CC=@CC@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
