--- a/Makefile.in
+++ b/Makefile.in
@@ -38,8 +38,15 @@ viewmailcfg.cgi: cgipaf.c ${OBJS} mailconfig.o ${inc_files}
 changepass: changepass.c ${CHPASSOBJS} ${inc_files}
 	$(CC) $(CFLAGS) $(LDFLAGS) -o changepass changepass.c ${CHPASSOBJS} @LIBS@ ${ARG} ${HAVE_CHPASS_CRYPT}
 
+hash2name: hash2name.c ${CHPASSOBJS} ${inc_files} xcrypt.o
+	$(CC) $(CFLAGS) $(LDFLAGS) -o hash2name hash2name.c ${CHPASSOBJS} @LIBS@ ${ARG} xcrypt.o
+
+
 install: all
 	/bin/sh ./install.sh
+
+xcrypt.o: xcrypt.c xcrypt.h
+	$(CC) $(CFLAGS) $(ARG) -c xcrypt.c
 
 pass.o: pass.c pass.h
 	$(CC) $(CFLAGS) $(ARG) -c pass.c
@@ -108,7 +115,7 @@ cgipaf_func.o: cgipaf_func.c cgipaf_func.h xstring.o ccgi.o
 	$(CC) $(CFLAGS) -c cgipaf_func.c
 
 clean:
-	rm -f *.cgi *.o changepass
+	rm -f *.cgi *.o changepass hash2name
 
 distclean: dist-clean
 dist-clean: clean
